compilateurDeca/src/test/deca/codegen/valid/sans_objet/precedence.deca
// Description:
//    tests multi declaration 
//
// Resultats:
//   13
// 
// Historique:
//    cree le 09/01/2026
{
    int x =(1 + 3*4);
    println(x);

}